# courselib

./: .gitignore  LICENSE  README.md  mkdocs.yml  package-lock.json  package.json  vite.config.ts
.cursor/rules/: architecture-commit-prefix.mdc
.github/workflows/: docs.yml  release.yml  validate.yml
docs/: index.md  installation.md  releases.md  usage.md  vault.md
docs/stylesheets/: extra.css
scripts/: validate.mjs  validate.sh
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/core/: assets.rs  fs_util.rs  git_vault.rs  indexer.rs  mod.rs  models.rs  parser.rs  slugs.rs  source_fetch.rs  vault.rs
src-tauri/src/db/: mod.rs  schema.sql
src/lib/: api.ts  theme.ts
src/lib/components/: AppHeader.svelte  CategoryPicker.svelte  ConfirmDialog.svelte  CourseCard.svelte  EmptyState.svelte  ErrorBanner.svelte  PathEditor.svelte  ProgressBar.svelte  SectionTree.svelte  Skeleton.svelte  ThemeToggle.svelte  Toaster.svelte
src/lib/stores/: toasts.svelte.ts
src/routes/: +layout.svelte  +page.svelte
src/routes/courses/[slug]/: +page.svelte
src/routes/import/: +page.svelte
src/routes/paths/: +page.svelte
src/routes/paths/[slug]/: +page.svelte
